 - Informationen über Positionen in Belegberichten können in einer eigenen
   Spalte angezeigt werden. Es wird zuerst nur die erste Position angezeigt,
   die Information weiterer Positionen lässt sich aus- und einklappen.
 - Wiedervorlagen können für mehrere Benutzer angelegt werden. Zudem können
   die Benutzer aus den Benutzergruppen gewählt werden.

Kleinere neue Features und Detailverbesserungen:

 - Angebote/Preisanfragen können aus der Aufgabenliste (auch auf dem
   Startbildschrim) heraus geschlossen werden.
 - Schweizer QR-Rechnungen: Bei den Adressdaten für Kunden und Rechnungssteller wird
   Schweiz als Standardwert verwendet. Es werden nur noch Druckvorlagen welche 'qr' im
   Vorlagenkürzel enthalten für die QR-Rechnung verwendet, dies ermöglicht die gleichzeitige
   Verwendung von QR und nicht-QR Rechnungen.
 - Beim Abschluss von Wiedervorlagen wird der Benutzer und der Zeitpunkt gespeichert.

2022-05-20 - Release 3.6.1

Größere neue Features:

Mittelgroße neue Features:

 - Neuer Workflow Artikel->Lieferantenaufrag. Hierbei wird der gerade
   bearbeitete Artikel gespeichert und die Lieferantenauftrags-Maske
   geöffnet. Der Artikel ist dann in der Eingabezeile vorbelegt.
   Sofern genau ein Lieferant beim Artikel hinterlegt ist, so wird
   auch dieser im Lieferantenauftrag vorbelegt.
 - In Angebot und Auftrag gibt es einen neuen Reiter für Telefonnotizen.
   Hier können Notizen zum Beleg erfasst werden. Nach diesen lässt sich im
   Bericht auch filtern.
 - Neuer Filter im Auftragsbericht nach "Volltext". Hierzu werden die Texte in
   den Feldern Bemerkungen, interne Bemerkungen, Versandort, Transportmittel,
   Vorgangsbezeichnung, Auftragsnummer, Angebotsnummer und
   Bestellnummer des Kunden durchsucht,
   Zudem werden Dokumente und Anhänge zu Aufträgen im DMS durchsucht.
   Dazu wird ein Hintgergrund-Job eingerichtet (täglich 03:20 Uhr), der die
   Texte aus den Dokumenten extrahiert. Im Moment werden Texte aus Dokumenten