@@ -1594,6 +1594,7 @@ $self->{texts} = {
   'Fixed value'                 => 'Fester Wert',
   'Focus position after update' => 'Eingabe-Fokus-Position nach Erneuern',
   'Folgekonto'                  => 'Folgekonto',
+  'Follow ups reminder sent.'   => 'Erinnerung an Wiedervorlagen versendet.',
   'Follow-Up'                   => 'Wiedervorlage',
   'Follow-Up Date'              => 'Wiedervorlagedatum',
   'Follow-Up On'                => 'Wiedervorlage am',
@@ -2251,6 +2252,7 @@ $self->{texts} = {
   'No email for current user #1 defined.' => 'Keine E-Mail-Adresse für den angemeldeten Benutzer #1 definiert.',
   'No email for user with login #1 defined.' => 'Keine E-Mail-Adresse für den Benutzer mit dem Login #1 definiert.',
   'No email recipient for customer #1 defined.' => 'Keine E-Mail-Adresse (Rechnungs- oder global) für den Kunden #1 definiert.',
+  'No email sender address given.' => 'Es ist keine E-Mail-Absender-Adresse angegeben.',
   'No end date given, setting to today' => 'Kein Enddatum gegeben, setze Enddatum auf heute',
   'No entries can be imported.' => 'Es können keine Einträge importiert werden.',
   'No entries have been imported yet.' => 'Es wurden noch keine Einträge importiert.',
