@@ -1594,6 +1594,7 @@ $self->{texts} = {
   'Fixed value'                 => '',
   'Focus position after update' => '',
   'Folgekonto'                  => '',
+  'Follow ups reminder sent.'   => '',
   'Follow-Up'                   => '',
   'Follow-Up Date'              => '',
   'Follow-Up On'                => '',
@@ -2251,6 +2252,7 @@ $self->{texts} = {
   'No email for current user #1 defined.' => '',
   'No email for user with login #1 defined.' => '',
   'No email recipient for customer #1 defined.' => '',
+  'No email sender address given.' => '',
   'No end date given, setting to today' => '',
   'No entries can be imported.' => '',
   'No entries have been imported yet.' => '',
