@@ -1,0 +1,28 @@
+[%- USE T8 %]
+[%- USE HTML %]
+<!DOCTYPE HTML>
+<html>
+ <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+ </head>
+
+ <body>
+  <h2>[% 'Unfinished follow-ups' | $T8 %]</h2>
+
+  <table>
+   <tr>
+    <th>[% 'Follow-Up Date' | $T8 %]</th>
+    <th>[% 'Subject' | $T8 %]</th>
+    <th>[% 'Created by' | $T8 %]</th>
+   </tr>
+
+   [%- FOREACH fu = follow_ups %]
+   <tr>
+    <td>[% HTML.escape(fu.follow_up_date_as_date) %]</td>
+    <td><a href="[% fu.link %]">[% HTML.escape(fu.note.subject) %]</a></td>
+    <td>[% HTML.escape(fu.created_by_employee.safe_name) %]</td>
+   </tr>
+   [%- END %]
+  </table>
+ </body>
+</html>
